--- a/desktop-themes/Menta/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/Menta/gtk-3.0/gtk-widgets.css
@@ -51,7 +51,9 @@
 	 */
 	outline-color: alpha(@theme_text_color, 0.3);
 	outline-style: dashed;
-	outline-offset: 2px;
+	outline-offset: -3px; /* 2px */
+	outline-width: 0px; /* disable ugly focus-line */
+	outline-radius: 2px;
 }
 
 /***************
@@ -3226,6 +3228,12 @@ GtkTreeView:selected:focus {
 	outline-color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.30);
 }
 
+GtkIconView,
+GtkViewport {
+    /* avoid resizing theme thumbnails in mate-appearance-properties */
+    padding: 0px;
+}
+
 GtkIconView.cell:selected,
 GtkIconView.cell:selected:focus {
 	border-radius: 4px;
@@ -3236,6 +3244,11 @@ GtkIconView.cell:selected:focus {
 	outline-color: @treeview_focus_border;
 	outline-style: solid;
 	outline-offset: 3px;
+}
+
+GtkIconView.cell:hover,
+GtkIconView.cell:hover:focus {
+	border-radius: 4px;
 }
 
 .view {
